# gh-univiewer

./: .gitignore  .travis.yml  Cargo.toml  README.md  gh-univiewer.yaml.example
.github/: dependabot.yml
src/: display.rs  main.rs  settings.rs
