[package]
name = "gh-univiewer"
version = "0.1.0"
authors = ["Jacob Helwig <jacob@technosorcery.net>"]
description = "Display various GitHub project stats & metrics using a Pimoroni Unicorn HAT HD on a Raspberry PI"
repository = "https://github.com/jhelwig/gh-univiewer"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["pimoroni", "github"]
categories = ["visualization"]
exclude = [
    ".vscode/*",
]

[features]
default = ["fake-unicorn"]
unicorn = ["unicorn_hat_hd/hardware"]
fake-unicorn = ["unicorn_hat_hd/fake-hardware"]

[dependencies]
config = "0.7.0"
failure = "0.1.3"
hubcaps = "0.4.10"
rgb = "0.8.11"
serde = "1.0.24"
serde_derive = "1.0.80"
tokio-core = "0.1.17"
unicorn_hat_hd = { version = "0.2.1", default-features = false }

[dependencies.chrono]
version = "0.4.0"
features = ["serde"]

[dev_dependencies]
spectral = "0.6.0"
